objects/Diet_and_Exercise__c.object
<CustomObject>
    <description>Depricated</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Diet and Exercises</relationshipLabel>
        <relationshipName>Diet_and_Exercises</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>During_the_past_month_which_statement__c</fullName>
        <label>During the past month which statement</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>How_many_years_have_you_practiced__c</fullName>
        <label>How many years have you practiced</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_would_you_best_describe_your_diet__c</fullName>
        <label>How would you best describe your diet</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Diet and Exercise</label>
    <nameField>
        <displayFormat>DE-{0000000000}</displayFormat>
        <label>Diet Excercise Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diet and Exercises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>